--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,6 +81,7 @@
                     <li><%= link_to 'Funcionarios',funcionarios_path %></li>
                     <li><%= link_to 'Estructura Organizacional',estructuras_path %></li>
                     <li><%= link_to 'Roles',roles_path %></li>
+                    <li><%= link_to 'Aprobar Procedimientos', aprobables_path %></li>
                     <li><%= link_to 'Cargos',cargos_path %></li>
                     <!--<li><%= link_to 'Entes', entes_path %></li>-->
                     <li><%= link_to 'Paises', paises_path %></li>
