--- a/app/views/layouts/jstree.html.erb
+++ b/app/views/layouts/jstree.html.erb
@@ -44,6 +44,7 @@
                     <li><%= link_to 'Roles',roles_path %></li>
                     <li><%= link_to 'Cargos',cargos_path %></li>
                     <!--<li><%= link_to 'Entes', entes_path %></li>-->
+                    <li><%= link_to 'Aprobar Procedimientos', aprobables_path %></li>
                     <li><%= link_to 'Paises', paises_path %></li>
                     <li><%= link_to 'Ciudades', ciudades_path %></li>
                     <li><%= link_to 'Unidades de Tiempo', unidades_tiempos_path %></li>
