--- a/app/views/procesos/_form.html.erb
+++ b/app/views/procesos/_form.html.erb
@@ -19,7 +19,7 @@
   <div class="control-group">
     <%= f.label :objetivo, required_label('Objetivo'), class: 'control-label' %>
     <div class="controls">
-      <%= f.text_area :nombre, :style => 'width:80%;', :rows => 7, :cols => 20, class: 'validate[required]' %>
+      <%= f.text_area :objetivo, :style => 'width:80%;', :rows => 7, :cols => 20, class: 'validate[required]' %>
     </div>
   </div>
 
