--- a/app/views/informes/_procedimientos_anho.html.erb
+++ b/app/views/informes/_procedimientos_anho.html.erb
@@ -14,8 +14,8 @@
 		<% @porcentaje.each do |key, val| %>
 		<% val['anho'].each do |k, v| %>
 		<tr>
-			<td><%= link_to k, '#' %></td>
-			<td><%= link_to val['nombre'], show_procedimientos_path(key) %></td>
+			<td><%= k %></td>
+			<td><%= val['nombre'] %></td>
 			<td><%= link_to v['cantidad'], show_expedientes_path(:procedimiento_id => key, :anho => k) %></td>
 			<td><%= calcular_porcentaje(v['cantidad'], v['PersonaFisica']) %></td>
 			<td><%= calcular_porcentaje(v['cantidad'], v['PersonaJuridica']) %></td>
