--- a/app/views/informes/show_tareas.html.erb
+++ b/app/views/informes/show_tareas.html.erb
@@ -1,10 +1,10 @@
 <section>
 	<div class="well">
-		<%= link_to icon_tag('Volver', :class => 'icon-arrow-left icon-white'), informes_path, :class => 'btn btn-primary' %>
+		<%= link_to icon_tag('Volver', :class => 'icon-arrow-left icon-white'), show_expedientes_path(:procedimiento_id => @procedimiento.id, :anho => @expediente.created_at.to_datetime.year), :class => 'btn btn-primary' %>
 	</div>
-	<p><b>Macroproceso: </b><%#= @macroproceso.nombre %><p>
-	<p><b>Proceso: </b><%#= @proceso.nombre %><p>
-	<p><b>Subproceso: </b><%#= @subproceso.nombre if @subproceso.present? %><p>
+	<p><b>Macroproceso: </b><%= @macroproceso.nombre %><p>
+	<p><b>Proceso: </b><%= @proceso.nombre %><p>
+	<p><b>Subproceso: </b><%= @subproceso.nombre if @subproceso.present? %><p>
 	<p><b>Expediente: </b><%= @expediente.numero %><p>
 	<p><b>Cliente: </b><%= @expediente.ente.nombre_completo %><p>
 	<table class="table table-striped table-bordered table-condensed">
@@ -16,6 +16,7 @@
 				<th>Estado</th>
 				<th>Fecha Fin</th>
 				<th>Funcionario Fin</th>
+				<th>Duracion</th>
 				<th>Procedimiento</th>
 			</tr>
 		</thead>
@@ -28,6 +29,7 @@
 				<td><%= v.tarea_expediente_estado %></td>
 				<td><%= v.tarea_expediente_fecha_fin if v.tarea_expediente_fecha_fin.present? %></td>
 				<td><%= Usuario.find(v.tarea_expediente_usuario_fin).funcionario.nombre_completo if v.tarea_expediente_usuario_fin.present? %></td>
+				<td><% %></td>
 				<td><%= v.procedimiento_nombre %></td>
 			</tr>
 			<% end %>
