--- a/app/views/informes/show_procedimientos.html.erb
+++ b/app/views/informes/show_procedimientos.html.erb
@@ -12,23 +12,39 @@
 			</div>
 		</div>
 		<% end %>
+		<%= link_to icon_tag('', :class => 'chart'), '#', :class => 'btn', :onclick => 'showGraph()', :title => 'Graficar' %>
+		<%= button_tag icon_tag('', :class => 'icon-print'), :class => "btn", :title => 'Imprimir Gráfico', :title => 'Imprimir' %>
 	</div>
-	<p><b>Macroproceso: </b><%= @macroproceso.nombre %><p>
-	<p><b>Proceso: </b><%= @proceso.nombre %><p>
-	<% if params[:filtro_vista].present? %>
-	<% case params[:filtro_vista] %>
-	<% when 'anho' %>
-	<%= render 'procedimientos_anho' %>
-	<% when 'mes' %>
-	<%= render 'procedimientos_mes' %>
-	<% when 'semestre' %>
-	<%= render 'procedimientos_semestre' %>
-	<% when 'trimestre' %>
-	<%= render 'procedimientos_trimestre' %>
-	<% when 'cuatrimestre' %>
-	<%= render 'procedimientos_cuatrimestre' %>
-	<% end %>
-	<% else %>
-	<%= render 'procedimientos_anho' %>
-	<% end %>
-</section>
+
+	<div id="graph" style="display:none;">
+		<%= button_tag "&times;".html_safe, :class => "close pull-right", :onclick => 'closeGraph()', :title => 'Cerrar Gráfico' %>
+		<div class="page-header">
+			<h1>Gráfico</h1>
+		</div>
+		<%= render 'graph_procedimientos'%>
+	</div>
+
+	<div id="tabla-contenido">
+		<div class="page-header">
+			<h1>Datos</h1>
+		</div>
+		<p><b>Macroproceso: </b><%= @macroproceso.nombre %><p>
+			<p><b>Proceso: </b><%= @proceso.nombre %><p>
+				<% if params[:filtro_vista].present? %>
+				<% case params[:filtro_vista] %>
+				<% when 'anho' %>
+				<%= render 'procedimientos_anho' %>
+				<% when 'mes' %>
+				<%= render 'procedimientos_mes' %>
+				<% when 'semestre' %>
+				<%= render 'procedimientos_semestre' %>
+				<% when 'trimestre' %>
+				<%= render 'procedimientos_trimestre' %>
+				<% when 'cuatrimestre' %>
+				<%= render 'procedimientos_cuatrimestre' %>
+				<% end %>
+				<% else %>
+				<%= render 'procedimientos_anho' %>
+				<% end %>
+			</div>
+		</section>
