--- a/app/views/informes/index.html.erb
+++ b/app/views/informes/index.html.erb
@@ -1,43 +1,14 @@
 <section>
-	<div class="well">
-		<%= simple_form_for controller_name, :url => informes_path, :method => :get do |f| %>
-		<div class="control-group">
-			<label class="optional">Año</label>
-			<div class="controls">
-				<%= select_tag 'anho', options_for_select(1990 .. 2013), prompt: "-- Seleccionar --" %>
-				<%= submit_tag 'Filtrar', :class => 'btn btn-success' %>
-			</div>
-		</div>
-		<% end %> 
-	</div>
-	<div id="tabla-contenido">
-		<table class="table table-striped table-bordered table-condensed">
-			<thead>
-				<tr>
-					<% if @anho.present? %>
-					<th>Año</th>
-					<% end %>
-					<th>Macroproceso</th>
-					<th>Cant. Recibidos</th>
-					<th>% Personas Físicas</th>
-					<th>% Personas Jurídicas</th>
-					<th>% Personas Jurídicas Internas</th>
-				</tr>
-			</thead>
-			<tbody>
-				<% @macroprocesos.each do |m| %>
-				<tr>
-					<% if @anho.present? %>
-					<td><%= @anho %></td>
-					<% end %>
-					<td><%= link_to m.nombre, show_macroproceso_path(m.id) %></td>
-					<td><%= @porcentaje[m.id].present? ? @porcentaje[m.id]["cantidad"] : 0 %></td>
-					<td><%=  @porcentaje[m.id].present? ? calcular_porcentaje(@porcentaje[m.id]["cantidad"], @porcentaje[m.id]["PersonaFisica"]) : 0 %></td>
-					<td><%=  @porcentaje[m.id].present? ? calcular_porcentaje(@porcentaje[m.id]["cantidad"], @porcentaje[m.id]["PersonaJuridica"]) : 0 %></td>
-					<td><%=  @porcentaje[m.id].present? ? calcular_porcentaje(@porcentaje[m.id]["cantidad"], @porcentaje[m.id]["OrganismoInterno"]) : 0%></td>
-				</tr>
-				<% end %>
-			</tbody>
-		</table>
-	</div>
+  <div class="page-header">
+    <h1>Informes <small> Datos estadisticos</small></h1>
+  </div>
+
+  <br />
+
+  <div>
+    <p><%= link_to "Demora de expedientes", tiempos_demorados_path %></p>
+    <p><%= link_to "Demanda de procesos", form_demanda_path %></p>
+    <p><%= link_to "Radicacion de Expedientes", form_radicados_path %></p>
+    <p><%= link_to "Vista General", vista_general_path %></p>
+  </div>
 </section>
