--- a/app/views/informes/show_macroproceso.html.erb
+++ b/app/views/informes/show_macroproceso.html.erb
@@ -1,29 +1,45 @@
 <section>
 	<div class="well">
-		<%= link_to icon_tag('Volver', :class => 'icon-arrow-left icon-white'), informes_path, :class => 'btn btn-primary' %>
+		<%= link_to icon_tag('Volver', :class => 'icon-arrow-left icon-white'), vista_general_path, :class => 'btn btn-primary' %>
+		<%= link_to icon_tag('', :class => 'chart'), '#', :class => 'btn', :onclick => 'showGraph()', :title => 'Graficar' %>
+		<%= button_tag icon_tag('', :class => 'icon-print'), :class => "btn", :title => 'Imprimir Gráfico', :title => 'Imprimir' %>
 	</div>
-	<table class="table table-striped table-bordered table-condensed">
-		<thead>
-			<tr>
-				<th>Año</th>
-				<th>Macroproceso</th>
-				<th>Cant. Recibidos</th>
-				<th>% Personas Físicas</th>
-				<th>% Personas Jurídicas</th>
-				<th>% Personas Jurídicas Internas</th>
-			</tr>
-		</thead>
-		<tbody>
-			<% @porcentaje.each do |key, val| %>
-			<tr>
-				<td><%= link_to key, show_procesos_path(:macroproceso_id => @macroproceso.id, :anho => key) %></td>
-				<td><%= link_to @macroproceso.nombre, show_procesos_path(@macroproceso.id) %></td>
-				<td><%= val["cantidad"] %></td>
-				<td><%= calcular_porcentaje(val["cantidad"], val["PersonaFisica"]) %></td>
-				<td><%= calcular_porcentaje(val["cantidad"], val["PersonaJuridica"]) %></td>
-				<td><%= calcular_porcentaje(val["cantidad"], val["OrganismoInterno"]) %></td>
-			</tr>
-			<% end %>
-		</tbody>
-	</table>
+
+	<div id="graph" style="display:none;">
+		<%= button_tag "&times;".html_safe, :class => "close pull-right", :onclick => 'closeGraph()', :title => 'Cerrar Gráfico' %>
+		<div class="page-header">
+			<h1>Gráfico</h1>
+		</div>
+		<%= render 'graph_macroproceso'%>
+	</div>
+
+	<div id="tabla-contenido">
+		<div class="page-header">
+			<h1>Datos</h1>
+		</div>
+		<table class="table table-striped table-bordered table-condensed">
+			<thead>
+				<tr>
+					<th>Año</th>
+					<th>Macroproceso</th>
+					<th>Cant. Recibidos</th>
+					<th>% Personas Físicas</th>
+					<th>% Personas Jurídicas</th>
+					<th>% Personas Jurídicas Internas</th>
+				</tr>
+			</thead>
+			<tbody>
+				<% @porcentaje.each do |key, val| %>
+				<tr>
+					<td><%= link_to key, show_procesos_path(:macroproceso_id => @macroproceso.id, :anho => key) %></td>
+					<td><%= link_to @macroproceso.nombre, show_procesos_path(@macroproceso.id) %></td>
+					<td><%= val["cantidad"] %></td>
+					<td><%= calcular_porcentaje(val["cantidad"], val["PersonaFisica"]) %></td>
+					<td><%= calcular_porcentaje(val["cantidad"], val["PersonaJuridica"]) %></td>
+					<td><%= calcular_porcentaje(val["cantidad"], val["OrganismoInterno"]) %></td>
+				</tr>
+				<% end %>
+			</tbody>
+		</table>
+	</div>
 </section>
