--- a/app/views/informes/show_procesos.html.erb
+++ b/app/views/informes/show_procesos.html.erb
@@ -12,22 +12,39 @@
 			</div>
 		</div>
 		<% end %>
+
+		<%= link_to icon_tag('', :class => 'chart'), '#', :class => 'btn', :onclick => 'showGraph()', :title => 'Graficar' %>
+		<%= button_tag icon_tag('', :class => 'icon-print'), :class => "btn pull-left", :title => 'Imprimir Gráfico', :title => 'Imprimir' %>
 	</div>
-	<p><b>Macroproceso: </b><%= @macroproceso.nombre %><p>
-	<% if params[:filtro_vista].present? %>
-	<% case params[:filtro_vista] %>
-	<% when 'anho' %>
-	<%= render 'procesos_anho' %>
-	<% when 'mes' %>
-	<%= render 'procesos_mes' %>
-	<% when 'semestre' %>
-	<%= render 'procesos_semestre' %>
-	<% when 'trimestre' %>
-	<%= render 'procesos_trimestre' %>
-	<% when 'cuatrimestre' %>
-	<%= render 'procesos_cuatrimestre' %>
-	<% end %>
-	<% else %>
-	<%= render 'procesos_anho' %>
-	<% end %>
+
+	<div id="graph" style="display:none;">
+		<%= button_tag "&times;".html_safe, :class => "close pull-right", :onclick => 'closeGraph()', :title => 'Cerrar Gráfico' %>
+		<div class="page-header">
+			<h1>Gráfico</h1>
+		</div>
+		<%= render 'graph_procesos'%>
+	</div>
+
+	<div id="tabla-contenido">
+		<div class="page-header">
+			<h1>Datos</h1>
+		</div>
+		<p><b>Macroproceso: </b><%= @macroproceso.nombre %></p>
+		<% if params[:filtro_vista].present? %>
+		<% case params[:filtro_vista] %>
+		<% when 'anho' %>
+		<%= render 'procesos_anho' %>
+		<% when 'mes' %>
+		<%= render 'procesos_mes' %>
+		<% when 'semestre' %>
+		<%= render 'procesos_semestre' %>
+		<% when 'trimestre' %>
+		<%= render 'procesos_trimestre' %>
+		<% when 'cuatrimestre' %>
+		<%= render 'procesos_cuatrimestre' %>
+		<% end %>
+		<% else %>
+		<%= render 'procesos_anho' %>
+		<% end %>
+	</div>
 </section>
