--- a/app/views/informes/show_demanda.html.erb
+++ b/app/views/informes/show_demanda.html.erb
@@ -8,7 +8,7 @@
     </div>
   <%= render 'graph_demanda' %>
 
-      <div id="chart" style="width: 560px; height: 300px;"></div>
+      <div id="chart" style="width: 90%; height: 300px;"></div>
 
 
       <% if @procedimiento.present? %>
