--- a/app/views/layouts/sesiones.html.erb
+++ b/app/views/layouts/sesiones.html.erb
@@ -2,7 +2,7 @@
 <html lang='en'>
   <head>    
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
-    <title>Gexip :: Iniciar Sesi&oacute;n </title>
+    <title>Gexip</title>
     <!--[if lt IE 9]>
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     
