--- a/app/views/unidades_tiempos/index.html.erb
+++ b/app/views/unidades_tiempos/index.html.erb
@@ -4,7 +4,8 @@
   </div>
 
   <div class="well">
-    <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_unidad_tiempo_path, :class => 'btn btn-primary' %>
+    <%= menu_link_to(icon_tag('Agregar', :class => 'icon-plus-sign icon-white'),:unidades_tiempos, action: :new,
+                     link_options: { class: 'btn btn-primary' }) %>
   </div>
   <br />
 
