--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,9 +8,10 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self  
+ *= require_self
  *= require bootstrap
  *= require expedientes
  *= require select2
  *= require estilos_globales
+ *= require chart
 */
